--- a/UDK-2011-08/UDKGame/Config/UDKEditorUserSettings.ini
+++ b/UDK-2011-08/UDKGame/Config/UDKEditorUserSettings.ini
@@ -37,8 +37,8 @@ DlgActorSearch=379,261,881,507
 DlgActorFactory=783,544,553,311,0
 DlgBuildProgress=760,475,406,200
 SurfaceProperties=647,11,545,757
-DockingContainer=2493,0,798,1080
-FloatingFrame_DockingContainer=2493,0,798,1080
+DockingContainer=1086,78,798,1080
+FloatingFrame_DockingContainer=1086,78,798,1080
 DlgGBSearch=953,568,400,300,0
 DlgSoundNodeWaveOptions=496,238,664,324,0
 DlgMove=760,475,497,408,0
@@ -97,7 +97,7 @@ Kismet_PosSizeMinimized=False
 Kismet_PosSize=0,0,1040,768
 ActorFloatingPropertyWindowMaximized=False
 ActorFloatingPropertyWindowMinimized=False
-ActorFloatingPropertyWindow=47,27,899,665
+ActorFloatingPropertyWindow=953,286,899,665
 DlgGenericStringEntryMaximized=False
 DlgGenericStringEntryMinimized=False
 MatineeMaximized=False
@@ -155,7 +155,7 @@ UseScriptDefinedOrder=True
 ShowAtStartup=True
 CurrentTip=38
 None=======
-CurrentTip=34
+CurrentTip=36
 
 [UnrealEd.MaterialEditorOptions]
 bShowGrid=True
@@ -427,7 +427,7 @@ NextType=0
 
 [IniVersion]
 0=1310480206.000000
-1=1300710129.000000
+1=1321398508.000000
 
 [GameAssetDatabase]
 JournalAlarmTime=11/20/2011 12:04:51 PM
@@ -590,7 +590,7 @@ IsLeftPanelCollapsed=False
 ExpandedPackages=/Engine;/UDKGame;/UDKGame/Content;/UDKGame/Content/Nomon;/UDKGame/Content/Nomon/Assets;/UDKGame/Content/Nomon/Characters;/UDKGame/Content/Nomon/NomonLevels;/UDKGame/Content/Nomon/NomonLevels/NOM-LevelTest;
 LeftSubpanelsState=mSharedCollectionsSizer:False:435.079158895918|mPrivateCollectionsSizer:True:28.2|mPackagesSizer:False:363.720841104082|
 None=======
-LeftSubpanelsState=mSharedCollectionsSizer:False:511.71586692587|mPrivateCollectionsSizer:True:28.2|mPackagesSizer:False:287.08413307413|
+LeftSubpanelsState=mSharedCollectionsSizer:False:486.412421282246|mPrivateCollectionsSizer:True:28.2|mPackagesSizer:False:292.387578717754|
 SelectedSharedCollection=UDK Cool Materials
 IsUsingFlatPackageList=False
 AssetViewLayoutAsDouble=3.000000
@@ -676,17 +676,17 @@ SeqVar_Player=Object.SeqVar_Player
 SeqVar_Object=
 SequenceVariable=
 SeqEvent_LevelLoaded=
-PlayerStart=Object.PlayerStart Object.NavigationPoint 
-NavigationPoint=Object.PlayerStart Object.NavigationPoint 
+PlayerStart=Object.PlayerStart Object.NavigationPoint
+NavigationPoint=Object.PlayerStart Object.NavigationPoint
 SeqAct_Interp=
 SeqAct_Latent=
 InterpGroup=
 SkeletalMesh=Object.SkeletalMesh.Origin
-InterpActor=Object.InterpActor Object.DynamicSMActor 
-DynamicSMActor=Object.InterpActor Object.DynamicSMActor 
-PointLightToggleable=Object.Light.LightComponent.Object.PointLightComponent.Translation Object.Light.LightComponent.Object.Lightmass Object.Light.LightComponent.Object.LightComponent 
-PointLight=Object.Light.LightComponent.Object.PointLightComponent.Translation Object.Light.LightComponent.Object.Lightmass Object.Light.LightComponent.Object.LightComponent 
-Light=Object.Light.LightComponent.Object.PointLightComponent.Translation Object.Light.LightComponent.Object.Lightmass Object.Light.LightComponent.Object.LightComponent 
+InterpActor=Object.InterpActor Object.DynamicSMActor
+DynamicSMActor=Object.InterpActor Object.DynamicSMActor
+PointLightToggleable=Object.Light.LightComponent.Object.PointLightComponent.Translation Object.Light.LightComponent.Object.Lightmass Object.Light.LightComponent.Object.LightComponent Object.Light.LightComponent.Object.LightShafts.BloomTint
+PointLight=Object.Light.LightComponent.Object.PointLightComponent.Translation Object.Light.LightComponent.Object.Lightmass Object.Light.LightComponent.Object.LightComponent Object.Light.LightComponent.Object.LightShafts.BloomTint
+Light=Object.Light.LightComponent.Object.SpotLightComponent Object.Light.LightComponent.Object.LightShafts.BloomTint Object.Light.LightComponent.Object.PointLightComponent.Translation Object.Light.LightComponent.Object.Lightmass Object.Light.LightComponent.Object.LightComponent
 PreviewMaterial=
 Material=
 MaterialInterface=
@@ -701,21 +701,21 @@ SkeletalMeshFactory=Object.None
 MaterialExpressionDestColor=
 MaterialExpressionDesaturation=
 MaterialExpressionVertexColor=
-AnimNodeBlendByPhysics=Object.AnimNodeBlendList Object.Performance Object.AnimNodeBlendBase Object.Morph 
-AnimNodeBlendList=Object.UDKAnimBlendByFall Object.animation Object.AnimNodeBlendList Object.Performance Object.AnimNodeBlendBase Object.Morph 
-AnimNodeBlendBase=Object.UDKAnimBlendByFall Object.animation Object.AnimNodeBlendList Object.Performance Object.AnimNodeBlendBase Object.Morph 
-AnimNode=Object.UDKAnimBlendByFall Object.animation Object.AnimNodeBlendList Object.Performance Object.AnimNodeBlendBase Object.Morph 
-AnimObject=Object.UDKAnimBlendByFall Object.animation Object.AnimNodeBlendList Object.Performance Object.AnimNodeBlendBase Object.Morph 
-UDKAnimBlendByFall=Object.UDKAnimBlendByFall Object.animation Object.AnimNodeBlendList Object.Performance Object.AnimNodeBlendBase Object.Morph 
-UDKAnimBlendBase=Object.UDKAnimBlendByFall Object.animation Object.AnimNodeBlendList Object.Performance Object.AnimNodeBlendBase Object.Morph 
+AnimNodeBlendByPhysics=Object.AnimNodeBlendList Object.Performance Object.AnimNodeBlendBase Object.Morph
+AnimNodeBlendList=Object.UDKAnimBlendByFall Object.animation Object.AnimNodeBlendList Object.Performance Object.AnimNodeBlendBase Object.Morph
+AnimNodeBlendBase=Object.UDKAnimBlendByFall Object.animation Object.AnimNodeBlendList Object.Performance Object.AnimNodeBlendBase Object.Morph
+AnimNode=Object.UDKAnimBlendByFall Object.animation Object.AnimNodeBlendList Object.Performance Object.AnimNodeBlendBase Object.Morph
+AnimObject=Object.UDKAnimBlendByFall Object.animation Object.AnimNodeBlendList Object.Performance Object.AnimNodeBlendBase Object.Morph
+UDKAnimBlendByFall=Object.UDKAnimBlendByFall Object.animation Object.AnimNodeBlendList Object.Performance Object.AnimNodeBlendBase Object.Morph
+UDKAnimBlendBase=Object.UDKAnimBlendByFall Object.animation Object.AnimNodeBlendList Object.Performance Object.AnimNodeBlendBase Object.Morph
 AnimNodeBlendDirectional=Object.AnimNodeBlendDirectional Object.AnimNodeBlendBase Object.Performance Object.Morph
 AnimSet=Object.AnimSet.UseTranslationBoneNames Object.AnimSet.ForceMeshTranslationBoneNames
 UTAnimNodeSequence=Object.UDKAnimNodeSequence Object.AnimNodeSequence Object.Group Object.Display Object.Camera Object.Performance Object.Morph
 UDKAnimNodeSequence=Object.UDKAnimNodeSequence Object.AnimNodeSequence Object.Group Object.Display Object.Camera Object.Performance Object.Morph
-AnimNodeSequence=Object.AnimNodeSequence Object.Group Object.Display Object.Camera Object.Performance Object.Morph 
+AnimNodeSequence=Object.AnimNodeSequence Object.Group Object.Display Object.Camera Object.Performance Object.Morph
 UDKAnimBlendByIdle=Object.AnimNodeBlendList Object.Performance Object.AnimNodeBlendBase Object.Morph
 AnimSequence=Object.AnimSequence
-Brush=Object.Debug 
+Brush=Object.Debug
 MaterialExpressionMeshEmitterVertexColor=
 MaterialExpressionTextureSample=
 TextureRenderTargetFactoryNew=
@@ -724,10 +724,12 @@ TextureRenderTarget=
 Texture=
 CubeBuilder=
 BrushBuilder=
-PostProcessVolume=Object.PostProcessVolume.Settings Object.Brush Object.Attachment Object.Physics Object.Debug 
-Volume=Object.Debug 
-LightmassImportanceVolume=Object.Debug 
-PathNode=Object.NavigationPoint 
+PostProcessVolume=Object.PostProcessVolume.Settings Object.Brush Object.Attachment Object.Physics Object.Debug
+Volume=Object.Debug
+LightmassImportanceVolume=Object.Debug
+PathNode=Object.NavigationPoint
+SpotLightToggleable=Object.Light.LightComponent.Object.SpotLightComponent Object.Light.LightComponent.Object.LightShafts.BloomTint Object.Light.LightComponent.Object.PointLightComponent.Translation Object.Light.LightComponent.Object.Lightmass Object.Light.LightComponent.Object.LightComponent
+SpotLight=Object.Light.LightComponent.Object.SpotLightComponent Object.Light.LightComponent.Object.LightShafts.BloomTint Object.Light.LightComponent.Object.PointLightComponent.Translation Object.Light.LightComponent.Object.Lightmass Object.Light.LightComponent.Object.LightComponent
 
 [AnimSetViewer]
 LightDir=P=-8192 Y=-8192 R=0
