--- a/UDK-2011-08/UDKGame/Config/UDKEngine.ini
+++ b/UDK-2011-08/UDKGame/Config/UDKEngine.ini
@@ -1280,7 +1280,15 @@ StatsKeyMappings=(ViewId=1,PropertyId=0x10000142,KeyId=265)
 
 [HardwareSurvey]
 LastSurveyVersion=8788
-LastSurveyDate=20111118
+LastSurveyDate=20111120
 SurveysFailed=1
 SurveysAttempted=2
+
+[WinDrv.Accessibility]
+StickyKeysHotkey=True
+ToggleKeysHotkey=True
+FilterKeysHotkey=True
+StickyKeysConfirmation=True
+ToggleKeysConfirmation=True
+FilterKeysConfirmation=True
 
