made changes to controlls and other stuff

--- a/UDK-2011-08/UDKGame/Config/UDKEditorUserSettings.ini
+++ b/UDK-2011-08/UDKGame/Config/UDKEditorUserSettings.ini
@@ -37,7 +37,7 @@ DlgActorSearch=379,261,881,507
 DlgActorFactory=783,544,553,311,0
 DlgBuildProgress=760,475,406,200
 SurfaceProperties=647,11,545,757
-DockingContainer=69,0,648,768
+DockingContainer=594,2,648,768
 FloatingFrame_DockingContainer=490,2,798,768
 DlgGBSearch=953,568,400,300,0
 DlgSoundNodeWaveOptions=496,238,664,324,0
@@ -54,9 +54,9 @@ DlgAddSpecialMaximized=False
 DlgAddSpecialMinimized=False
 DlgBuildProgressMaximized=False
 DlgBuildProgressMinimized=False
-DockingContainerMaximized=False
+DockingContainerMaximized=True
 DockingContainerMinimized=False
-FloatingFrame_DockingContainerMaximized=False
+FloatingFrame_DockingContainerMaximized=True
 FloatingFrame_DockingContainerMinimized=False
 FloatingFrame_AttachmentsMaximized=False
 FloatingFrame_AttachmentsMinimized=False
@@ -94,7 +94,7 @@ DlgStaticMeshLightingInfo2Minimized=False
 DlgStaticMeshLightingInfo2=69,259,1297,500
 Kismet_PosSizeMaximized=False
 Kismet_PosSizeMinimized=False
-Kismet_PosSize=68,0,1040,768
+Kismet_PosSize=354,21,1040,768
 ActorFloatingPropertyWindowMaximized=False
 ActorFloatingPropertyWindowMinimized=False
 ActorFloatingPropertyWindow=280,-976,899,665
@@ -145,8 +145,8 @@ LocalizationFile=UnrealEd
 FramePos.x=69
 FramePos.y=69
 None=======
-FramePos.x=96
-FramePos.y=-670
+FramePos.x=205
+FramePos.y=-741
 FrameSize.x=1120
 FrameSize.y=768
 FrameMaximized=1
@@ -161,7 +161,7 @@ UseScriptDefinedOrder=True
 ShowAtStartup=True
 CurrentTip=38
 None=======
-CurrentTip=12
+CurrentTip=15
 
 [UnrealEd.MaterialEditorOptions]
 bShowGrid=True
@@ -186,7 +186,7 @@ BSPAutoUpdate=False
 [FEditorModeTools]
 ShowWidget=True
 MouseLock=False
-CoordSystem=1
+CoordSystem=0
 UseAbsoluteTranslation=True
 AllowTranslateRotateZWidget=False
 
@@ -441,7 +441,7 @@ NextType=0
 1=1300710129.000000
 
 [GameAssetDatabase]
-JournalAlarmTime=11/20/2011 12:04:51 PM
+JournalAlarmTime=11/27/2011 12:45:10 PM
 
 [ToolTips]
 DelayInMS=-1
@@ -510,7 +510,7 @@ StartPage_Visible=True
 [UnrealEd]
 RecentAssets="             NomonAvatar.Nomon_Golem_AnimTree NomonAvatar.Nomon_Golem Nomon.Mesh.Nomon_Golem NOM-LevelOne.WhiteMat NOM-LevelTest.Nomon_Golem A_Weapon_RocketLauncher.Cue.A_Weapon_RL_AltFireQueue1_Cue A_Weapon_RocketLauncher.WAV.A_Weapon_RL_Fire03 A_Weapon_RocketLauncher.Cue.A_Weapon_RL_Impact_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_Fire_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_RocketLoaded_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_SeekLost_Cue NomonAvatar.Nomon_Golem_Large NomonAvatar.GolemAnims "
 None=======
-RecentAssets="                  NomonAssets.Spikes_pCube3 NomonAssets.DarkItem NomonAvatar.Nomon_Golem_Large NomonAssets.Enemy NomonAssets.FloorMat NomonAssets.Black NomonAvatar.Nomon_Golem_AnimTree NomonAvatar.Nomon_Golem Nomon.Mesh.Nomon_Golem NOM-LevelOne.WhiteMat NOM-LevelTest.Nomon_Golem A_Weapon_RocketLauncher.Cue.A_Weapon_RL_AltFireQueue1_Cue A_Weapon_RocketLauncher.WAV.A_Weapon_RL_Fire03 A_Weapon_RocketLauncher.Cue.A_Weapon_RL_Impact_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_Fire_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_RocketLoaded_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_SeekLost_Cue NomonAvatar.GolemAnims "
+RecentAssets="                      NomonAvatar.Nomon_Golem_Large NomonAssets.Spikes_pCube3 NomonAssets.DarkItem NomonAssets.Enemy NomonAssets.FloorMat NomonAssets.Black NomonAvatar.Nomon_Golem_AnimTree NomonAvatar.Nomon_Golem Nomon.Mesh.Nomon_Golem NOM-LevelOne.WhiteMat NOM-LevelTest.Nomon_Golem A_Weapon_RocketLauncher.Cue.A_Weapon_RL_AltFireQueue1_Cue A_Weapon_RocketLauncher.WAV.A_Weapon_RL_Fire03 A_Weapon_RocketLauncher.Cue.A_Weapon_RL_Impact_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_Fire_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_RocketLoaded_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_SeekLost_Cue NomonAvatar.GolemAnims CTF_Flag_IronGuard.Mesh.S_CTF_Flag_IronGuard A_Character_BodyImpacts.BodyImpacts.A_Character_BodyImpact_BodyFall_Cue A_Weapon_BioRifle.Weapon.A_BioRifle_FireImpactFizzle_Cue A_Weapon_BioRifle.Weapon.A_BioRifle_FireImpactExplode02 "
 
 [ReferencedAssets]
 SplitterPos=200
@@ -617,17 +617,37 @@ InterpDataSplitterPosProportion=0.500000
 InterpDataSplitterPosProportionFavorites=0.500000
 SkeletalMeshSocketSplitterPosProportionFavorites=0.500000
 SkeletalMeshSocketSplitterPosProportion=0.500000
+SeqVar_BoolSplitterPosProportion=0.500000
+SeqVar_BoolSplitterPosProportionFavorites=0.500000
+SeqAct_NOMCollectSplitterPosProportion=0.500000
+SeqAct_NOMCollectSplitterPosProportionFavorites=0.500000
+SeqAct_ToggleSplitterPosProportion=0.500000
+SeqAct_ToggleSplitterPosProportionFavorites=0.500000
+SeqVar_NamedSplitterPosProportion=0.500000
+SeqVar_NamedSplitterPosProportionFavorites=0.500000
+SeqCond_CompareBoolSplitterPosProportion=0.500000
+SeqCond_CompareBoolSplitterPosProportionFavorites=0.500000
+SeqEvent_UsedSplitterPosProportion=0.500000
+SeqEvent_UsedSplitterPosProportionFavorites=0.500000
+UTSeqAct_PlayAnnouncementSplitterPosProportion=0.500000
+UTSeqAct_PlayAnnouncementSplitterPosProportionFavorites=0.500000
+SeqAct_GetLocationAndRotationSplitterPosProportion=0.500000
+SeqAct_GetLocationAndRotationSplitterPosProportionFavorites=0.500000
+SeqAct_LogSplitterPosProportion=0.500000
+SeqAct_LogSplitterPosProportionFavorites=0.500000
+SeqAct_DestroySplitterPosProportion=0.500000
+SeqAct_DestroySplitterPosProportionFavorites=0.500000
 
 [ContentBrowserUIState]
 FilterPanelHeight=200.000000
 IsFilterPanelCollapsed=False
 FilterPanelSearchString=
 LeftPanelWidth=266.000000
-IsLeftPanelCollapsed=False
+IsLeftPanelCollapsed=True
 ExpandedPackages=/Engine;/UDKGame;/UDKGame/Content;/UDKGame/Content/Nomon;/UDKGame/Content/Nomon/Assets;/UDKGame/Content/Nomon/Assets/NomonAssets;/UDKGame/Content/Nomon/Characters;/UDKGame/Content/Nomon/NomonLevels;/UDKGame/Content/Nomon/NomonLevels/NOM-LevelTest;
 LeftSubpanelsState=mSharedCollectionsSizer:False:435.079158895918|mPrivateCollectionsSizer:True:28.2|mPackagesSizer:False:363.720841104082|
 None=======
-LeftSubpanelsState=mSharedCollectionsSizer:False:185.707343606251|mPrivateCollectionsSizer:True:28.2|mPackagesSizer:False:301.092656393749|
+LeftSubpanelsState=mSharedCollectionsSizer:False:0|mPrivateCollectionsSizer:True:0|mPackagesSizer:False:0|
 SelectedSharedCollection=UDK Cool Materials
 IsUsingFlatPackageList=False
 AssetViewLayoutAsDouble=3.000000
@@ -687,10 +707,10 @@ bFilterBSP=True
 bFilterTerrain=True
 
 [MRU]
-MRUItem0=C:\UDK\UDK-2011-08\UDKGame\Content\Nomon\NomonLevels\NOM-LevelThree.udk
-MRUItem1=C:\UDK\UDK-2011-08\UDKGame\Content\Nomon\NomonLevels\NOM-LevelOne.udk
-MRUItem2=C:\UDK\UDK-2011-08\UDKGame\Content\Nomon\NomonLevels\NOM-LevelTwo.udk
-MRUItem3=C:\UDK\UDK-2011-08\UDKGame\Content\Nomon\NomonLevels\NOM-LevelTest.udk
+MRUItem0=C:\UDK\UDK-2011-08\UDKGame\Content\Nomon\NomonLevels\NOM-LevelTest.udk
+MRUItem1=C:\UDK\UDK-2011-08\UDKGame\Content\Nomon\NomonLevels\NOM-LevelTwo.udk
+MRUItem2=C:\UDK\UDK-2011-08\UDKGame\Content\Nomon\NomonLevels\NOM-LevelOne.udk
+MRUItem3=C:\UDK\UDK-2011-08\UDKGame\Content\Nomon\NomonLevels\NOM-LevelThree.udk
 MRUItem4=C:\UDK\UDK-2011-08\UDKGame\Content\Nomon\Levels\NOM-LevelTest.udk
 MRUItem5=C:\UDK\UDK-2011-08\UDKGame\Content\Maps\UT3\VCTF-Necropolis.udk
 
@@ -703,25 +723,25 @@ AnimTreeEditor=1
 StaticMeshEditor=2
 
 [PropertyWindowExpansion]
-SeqEvent_Touch=Object.SequenceEvent Object.SequenceObject
-SequenceEvent=Object.SequenceEvent Object.SequenceObject
-SequenceOp=Object.SequenceEvent Object.SequenceObject
-SequenceObject=Object.SequenceEvent Object.SequenceObject
-Object=
+SeqEvent_Touch=Object.TouchTypes.ClassProximityTypes Object.SeqEvent_Touch Object.SequenceEvent Object.SequenceObject 
+SequenceEvent=Object.TouchTypes.ClassProximityTypes Object.SeqEvent_Touch Object.SequenceEvent Object.SequenceObject 
+SequenceOp=Object.TouchTypes.ClassProximityTypes Object.SeqEvent_Touch Object.SequenceEvent Object.SequenceObject 
+SequenceObject=Object.SequenceObject 
+Object=Object.SequenceObject 
 SeqAct_ModifyHealth=Object.SeqAct_ModifyHealth Object.SequenceAction Object.SequenceObject
-SequenceAction=Object.SeqAct_Interp Object.SequenceAction Object.SequenceObject
-SeqVar_Player=Object.SeqVar_Player Object.SequenceObject
-SeqVar_Object=Object.SequenceObject
-SequenceVariable=Object.SequenceObject
-SeqEvent_LevelLoaded=Object.SequenceEvent Object.SequenceObject
-PlayerStart=Object.PlayerStart Object.NavigationPoint
-NavigationPoint=Object.PlayerStart Object.NavigationPoint
+SequenceAction=Object.SequenceAction.Targets Object.SequenceObject 
+SeqVar_Player=Object.SeqVar_Player Object.SeqVar_Object Object.SequenceVariable Object.SequenceObject 
+SeqVar_Object=Object.SeqVar_Player Object.SeqVar_Object Object.SequenceVariable Object.SequenceObject 
+SequenceVariable=Object.SeqVar_Player Object.SeqVar_Object Object.SequenceVariable Object.SequenceObject 
+SeqEvent_LevelLoaded=Object.SequenceEvent Object.SequenceObject 
+PlayerStart=Object.PlayerStart Object.NavigationPoint Object.Movement.Location
+NavigationPoint=Object.PlayerStart Object.NavigationPoint Object.Movement.Location
 SeqAct_Interp=Object.SeqAct_Interp Object.SequenceAction Object.SequenceObject
 SeqAct_Latent=Object.SeqAct_Interp Object.SequenceAction Object.SequenceObject
 InterpGroup=
 SkeletalMesh=Object.SkeletalMesh.Origin
-InterpActor=Object.InterpActor Object.DynamicSMActor Object.Movement.Location 
-DynamicSMActor=Object.InterpActor Object.DynamicSMActor Object.Movement.Location 
+InterpActor=Object.InterpActor Object.DynamicSMActor Object.Movement.Location
+DynamicSMActor=Object.InterpActor Object.DynamicSMActor Object.Movement.Location
 PointLightToggleable=Object.Light.LightComponent.Object.PointLightComponent.Translation Object.Light.LightComponent.Object.Lightmass Object.Light.LightComponent.Object.LightComponent
 PointLight=Object.Light.LightComponent.Object.PointLightComponent.Translation Object.Light.LightComponent.Object.Lightmass Object.Light.LightComponent.Object.LightComponent.Function Object.Light.LightComponent.Object.LightShafts
 Light=Object.Light.LightComponent.Object.PointLightComponent.Translation Object.Light.LightComponent.Object.Lightmass Object.Light.LightComponent.Object.LightComponent.Function Object.Light.LightComponent.Object.LightShafts
@@ -753,7 +773,7 @@ UDKAnimNodeSequence=Object.UDKAnimNodeSequence Object.AnimNodeSequence Object.Gr
 AnimNodeSequence=Object.AnimNodeSequence Object.Group Object.Display Object.Camera Object.Performance Object.Morph
 UDKAnimBlendByIdle=Object.AnimNodeBlendList Object.Performance Object.AnimNodeBlendBase Object.Morph
 AnimSequence=Object.AnimSequence
-Brush=Object.PostProcessVolume.Settings Object.Brush Object.Attachment Object.Physics Object.Debug 
+Brush=Object.WaterVolume Object.PhysicsVolume Object.Volume Object.Collision Object.Brush Object.Attachment Object.Advanced Object.Debug
 MaterialExpressionMeshEmitterVertexColor=
 MaterialExpressionTextureSample=
 TextureRenderTargetFactoryNew=
@@ -762,8 +782,8 @@ TextureRenderTarget=
 Texture=
 CubeBuilder=
 BrushBuilder=
-PostProcessVolume=Object.PostProcessVolume.Settings Object.Brush Object.Attachment Object.Physics Object.Debug 
-Volume=Object.PostProcessVolume.Settings Object.Brush Object.Attachment Object.Physics Object.Debug 
+PostProcessVolume=Object.PostProcessVolume.Settings Object.Brush Object.Attachment Object.Physics Object.Debug
+Volume=Object.WaterVolume Object.PhysicsVolume Object.Volume Object.Collision Object.Brush Object.Attachment Object.Advanced Object.Debug
 LightmassImportanceVolume=Object.Debug
 PathNode=Object.NavigationPoint
 SeqEvent_NOMGameWon=
@@ -776,17 +796,32 @@ ZoneInfo=
 Info=
 FbxImportUI=Object.General Object.SkeletalMesh Object.StaticMesh Object.Materials
 StaticMesh=
-StaticMeshActor=Object.StaticMeshActor Object.Movement.Location 
-StaticMeshActorBase=Object.StaticMeshActor Object.Movement.Location 
+StaticMeshActor=Object.StaticMeshActor Object.Movement.Location
+StaticMeshActorBase=Object.StaticMeshActor Object.Movement.Location
 InterpTrackMove=
 InterpTrack=
 SequenceFrame=Object.SequenceObject
 TriggerVolume=Object.Debug
 Trigger=Object.Movement.Location
-SeqAct_AttachToActor=Object.SequenceAction Object.SequenceObject
+SeqAct_AttachToActor=Object.SeqAct_AttachToActor Object.SequenceAction.Targets Object.SequenceObject 
 Actor=
-InterpData=Object.SequenceObject
-SkeletalMeshSocket=
+InterpData=Object.SequenceVariable Object.SequenceObject
+SkeletalMeshSocket=Object.RelativeRotation
+SeqVar_Bool=Object.SeqVar_Bool Object.SequenceVariable Object.SequenceObject
+UTWaterVolume=Object.WaterVolume Object.PhysicsVolume Object.Volume Object.Collision Object.Brush Object.Attachment Object.Advanced Object.Debug
+WaterVolume=Object.WaterVolume Object.PhysicsVolume Object.Volume Object.Collision Object.Brush Object.Attachment Object.Advanced Object.Debug
+PhysicsVolume=Object.WaterVolume Object.PhysicsVolume Object.Volume Object.Collision Object.Brush Object.Attachment Object.Advanced Object.Debug
+SeqAct_NOMCollect=Object.SequenceAction Object.SequenceObject
+SeqAct_Toggle=Object.SequenceAction.Targets Object.SequenceObject
+SeqVar_Named=Object.SequenceObject
+SeqCond_CompareBool=Object.SequenceObject
+SequenceCondition=Object.SequenceObject
+SeqEvent_Used=Object.SeqEvent_Used Object.TouchTypes Object.SequenceEvent Object.SequenceObject
+SkeletalMeshActor=Object.SkeletalMeshActor Object.Movement Object.Display Object.Attachment Object.Collision.CollisionComponent.Object.SkeletalMeshComponent Object.Physics Object.Advanced Object.Debug Object.Object
+UTSeqAct_PlayAnnouncement=Object.UTSeqAct_PlayAnnouncement.Announcement Object.SequenceObject
+SeqAct_GetLocationAndRotation=Object.SequenceObject
+SeqAct_Log=Object.SeqAct_Log.TargetOffset Object.SequenceAction.Targets Object.SequenceObject 
+SeqAct_Destroy=Object.SequenceAction.Targets Object.SequenceObject 
 
 [AnimSetViewer]
 LightDir=P=-8192 Y=-8192 R=0
