--- a/UDK-2011-08/UDKGame/Config/UDKInput.ini
+++ b/UDK-2011-08/UDKGame/Config/UDKInput.ini
@@ -135,7 +135,7 @@ Bindings=(Name="LeftControl",Command="GBA_Jump")
 Bindings=(Name="Enter",Command="GBA_Use")
 Bindings=(Name="F10",Command="ToggleInventory")
 Bindings=(Name="SpaceBar",Command="GBA_Jump")
-Bindings=(Name="W",Command="GBA_MoveForward")
+Bindings=(Name="W",Command="GBA_Jump")
 Bindings=(Name="S",Command="GBA_Backward")
 Bindings=(Name="A",Command="GBA_StrafeLeft")
 Bindings=(Name="D",Command="GBA_StrafeRight")
