--- a/UDK-2011-08/UDKGame/Config/UDKEditorUserSettings.ini
+++ b/UDK-2011-08/UDKGame/Config/UDKEditorUserSettings.ini
@@ -37,8 +37,8 @@ DlgActorSearch=379,261,881,507
 DlgActorFactory=783,544,553,311,0
 DlgBuildProgress=760,475,406,200
 SurfaceProperties=647,11,545,757
-DockingContainer=-244,-932,960,1080
-FloatingFrame_DockingContainer=-244,-932,960,1080
+DockingContainer=744,-993,922,969
+FloatingFrame_DockingContainer=744,-993,922,969
 DlgGBSearch=953,568,400,300,0
 DlgSoundNodeWaveOptions=496,238,664,324,0
 DlgMove=673,113,497,408
@@ -169,7 +169,7 @@ UseScriptDefinedOrder=True
 ShowAtStartup=True
 CurrentTip=38
 None=======
-CurrentTip=17
+CurrentTip=18
 
 [UnrealEd.MaterialEditorOptions]
 bShowGrid=True
@@ -530,7 +530,7 @@ StartPage_Visible=True
 [UnrealEd]
 RecentAssets="             NomonAvatar.Nomon_Golem_AnimTree NomonAvatar.Nomon_Golem Nomon.Mesh.Nomon_Golem NOM-LevelOne.WhiteMat NOM-LevelTest.Nomon_Golem A_Weapon_RocketLauncher.Cue.A_Weapon_RL_AltFireQueue1_Cue A_Weapon_RocketLauncher.WAV.A_Weapon_RL_Fire03 A_Weapon_RocketLauncher.Cue.A_Weapon_RL_Impact_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_Fire_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_RocketLoaded_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_SeekLost_Cue NomonAvatar.Nomon_Golem_Large NomonAvatar.GolemAnims "
 None=======
-RecentAssets="                              NomonAssets.Dust Castle_Assets.FX.T_FX_Fire_SubUV_01 NomonAssets.DarkCloud NomonAssets.Glowdust Castle_Assets.FX.M_FX_Fire_SubUV_01 Castle_Assets.FX.P_FX_Fire_SubUV_01 Pickups.Deployables.Effects.P_Deployables_EMP_Mine_VehicleDisabled CTF_Flag_IronGuard.Effects.P_CTF_Flag_IronGuard_Spawn_Red CTF_Flag_IronGuard.Effects.P_CTF_Flag_IronGuard_Idle_Red A_Weapon_BioRifle.Weapon.A_BioRifle_FireImpactExplode02 A_Weapon_BioRifle.Weapon.A_BioRifle_FireImpactFizzle_Cue A_Character_BodyImpacts.BodyImpacts.A_Character_BodyImpact_BodyFall_Cue CTF_Flag_IronGuard.Mesh.S_CTF_Flag_IronGuard NomonAvatar.GolemAnims A_Weapon_RocketLauncher.Cue.A_Weapon_RL_SeekLost_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_RocketLoaded_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_Fire_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_Impact_Cue A_Weapon_RocketLauncher.WAV.A_Weapon_RL_Fire03 A_Weapon_RocketLauncher.Cue.A_Weapon_RL_AltFireQueue1_Cue NOM-LevelTest.Nomon_Golem NOM-LevelOne.WhiteMat Nomon.Mesh.Nomon_Golem NomonAvatar.Nomon_Golem NomonAvatar.Nomon_Golem_AnimTree NomonAssets.Black NomonAssets.FloorMat NomonAssets.Enemy NomonAssets.DarkItem NomonAssets.Spikes_pCube3 "
+RecentAssets="                              NomonAssets.Spikes_pCube3 NomonAssets.DarkItem NomonAssets.Enemy NomonAssets.FloorMat NomonAssets.Black NomonAvatar.Nomon_Golem_AnimTree NomonAvatar.Nomon_Golem Nomon.Mesh.Nomon_Golem NOM-LevelOne.WhiteMat NOM-LevelTest.Nomon_Golem A_Weapon_RocketLauncher.Cue.A_Weapon_RL_AltFireQueue1_Cue A_Weapon_RocketLauncher.WAV.A_Weapon_RL_Fire03 A_Weapon_RocketLauncher.Cue.A_Weapon_RL_Impact_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_Fire_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_RocketLoaded_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_SeekLost_Cue NomonAvatar.GolemAnims CTF_Flag_IronGuard.Mesh.S_CTF_Flag_IronGuard A_Character_BodyImpacts.BodyImpacts.A_Character_BodyImpact_BodyFall_Cue A_Weapon_BioRifle.Weapon.A_BioRifle_FireImpactFizzle_Cue A_Weapon_BioRifle.Weapon.A_BioRifle_FireImpactExplode02 CTF_Flag_IronGuard.Effects.P_CTF_Flag_IronGuard_Idle_Red CTF_Flag_IronGuard.Effects.P_CTF_Flag_IronGuard_Spawn_Red Pickups.Deployables.Effects.P_Deployables_EMP_Mine_VehicleDisabled Castle_Assets.FX.P_FX_Fire_SubUV_01 Castle_Assets.FX.M_FX_Fire_SubUV_01 NomonAssets.Glowdust NomonAssets.DarkCloud Castle_Assets.FX.T_FX_Fire_SubUV_01 NomonAssets.Dust "
 
 [ReferencedAssets]
 SplitterPos=200
@@ -695,7 +695,7 @@ IsLeftPanelCollapsed=False
 ExpandedPackages=/Engine;/UDKGame;/UDKGame/Content;/UDKGame/Content/Nomon;/UDKGame/Content/Nomon/Assets;/UDKGame/Content/Nomon/Assets/NomonAssets;/UDKGame/Content/Nomon/Characters;/UDKGame/Content/Nomon/NomonLevels;/UDKGame/Content/Nomon/NomonLevels/NOM-LevelTest;
 LeftSubpanelsState=mSharedCollectionsSizer:False:435.079158895918|mPrivateCollectionsSizer:True:28.2|mPackagesSizer:False:363.720841104082|
 None=======
-LeftSubpanelsState=mSharedCollectionsSizer:False:40.2828326180258|mPrivateCollectionsSizer:True:28.2|mPackagesSizer:False:758.517167381974|
+LeftSubpanelsState=mSharedCollectionsSizer:False:34.6851931330473|mPrivateCollectionsSizer:True:28.2|mPackagesSizer:False:653.114806866953|
 SelectedSharedCollection=UDK Cool Materials
 IsUsingFlatPackageList=False
 AssetViewLayoutAsDouble=3.000000
@@ -773,15 +773,15 @@ Cascade=1
 
 [PropertyWindowExpansion]
 SeqEvent_Touch=Object.TouchTypes.ClassProximityTypes Object.SeqEvent_Touch Object.SequenceEvent Object.SequenceObject
-SequenceEvent=Object.SequenceEvent Object.SequenceObject 
-SequenceOp=Object.SeqAct_AttachToActor Object.SequenceAction.Targets Object.SequenceObject 
-SequenceObject=Object.SequenceObject 
-Object=Object.SequenceObject 
+SequenceEvent=Object.SequenceEvent Object.SequenceObject
+SequenceOp=Object.SeqAct_AttachToActor Object.SequenceAction.Targets Object.SequenceObject
+SequenceObject=Object.SequenceObject
+Object=Object.SequenceObject
 SeqAct_ModifyHealth=Object.SeqAct_ModifyHealth Object.SequenceAction Object.SequenceObject
-SequenceAction=Object.SeqAct_AttachToActor Object.SequenceAction.Targets Object.SequenceObject 
-SeqVar_Player=Object.SeqVar_Player Object.SeqVar_Object Object.SequenceVariable Object.SequenceObject 
-SeqVar_Object=Object.SeqVar_Player Object.SeqVar_Object Object.SequenceVariable Object.SequenceObject 
-SequenceVariable=Object.SeqVar_Player Object.SeqVar_Object Object.SequenceVariable Object.SequenceObject 
+SequenceAction=Object.SeqAct_AttachToActor Object.SequenceAction.Targets Object.SequenceObject
+SeqVar_Player=Object.SeqVar_Player Object.SeqVar_Object Object.SequenceVariable Object.SequenceObject
+SeqVar_Object=Object.SeqVar_Player Object.SeqVar_Object Object.SequenceVariable Object.SequenceObject
+SequenceVariable=Object.SeqVar_Player Object.SeqVar_Object Object.SequenceVariable Object.SequenceObject
 SeqEvent_LevelLoaded=Object.SequenceEvent Object.SequenceObject
 PlayerStart=Object.PlayerStart Object.NavigationPoint Object.Movement.Location
 NavigationPoint=Object.PlayerStart Object.NavigationPoint Object.Movement.Location
@@ -849,10 +849,10 @@ StaticMeshActor=Object.StaticMeshActor Object.Movement.Location
 StaticMeshActorBase=Object.StaticMeshActor Object.Movement.Location
 InterpTrackMove=
 InterpTrack=
-SequenceFrame=Object.SequenceObject 
+SequenceFrame=Object.SequenceObject
 TriggerVolume=Object.Debug
 Trigger=Object.Movement.Location
-SeqAct_AttachToActor=Object.SeqAct_AttachToActor Object.SequenceAction.Targets Object.SequenceObject 
+SeqAct_AttachToActor=Object.SeqAct_AttachToActor Object.SequenceAction.Targets Object.SequenceObject
 Actor=
 InterpData=Object.SequenceVariable Object.SequenceObject
 SkeletalMeshSocket=Object.RelativeRotation
@@ -893,7 +893,7 @@ ParticleModuleSubUVBase=
 MaterialExpressionParticleSubUV=
 MaterialExpressionMultiply=Object.MaterialExpression
 Texture2D=
-SeqEvent_PlayerSpawned=Object.SequenceEvent Object.SequenceObject 
+SeqEvent_PlayerSpawned=Object.SequenceEvent Object.SequenceObject
 
 [AnimSetViewer]
 LightDir=P=-8192 Y=-8192 R=0
