added models to upk

--- a/UDK-2011-08/UDKGame/Config/UDKEditorUserSettings.ini
+++ b/UDK-2011-08/UDKGame/Config/UDKEditorUserSettings.ini
@@ -37,7 +37,7 @@ DlgActorSearch=379,261,881,507
 DlgActorFactory=783,544,553,311,0
 DlgBuildProgress=760,475,406,200
 SurfaceProperties=647,11,545,757
-DockingContainer=262,52,922,646
+DockingContainer=123,-989,922,646
 FloatingFrame_DockingContainer=437,219,922,788
 DlgGBSearch=953,568,400,300,0
 DlgSoundNodeWaveOptions=496,238,664,324,0
@@ -49,14 +49,14 @@ DlgProgressMinimized=False
 DlgProgress=483,259,506,143
 SavePkgPromptDlgMaximized=False
 SavePkgPromptDlgMinimized=False
-SavePkgPromptDlg=897,28,400,400
+SavePkgPromptDlg=490,73,400,400
 DlgAddSpecialMaximized=False
 DlgAddSpecialMinimized=False
 DlgBuildProgressMaximized=False
 DlgBuildProgressMinimized=False
-DockingContainerMaximized=False
+DockingContainerMaximized=True
 DockingContainerMinimized=False
-FloatingFrame_DockingContainerMaximized=False
+FloatingFrame_DockingContainerMaximized=True
 FloatingFrame_DockingContainerMinimized=False
 FloatingFrame_AttachmentsMaximized=False
 FloatingFrame_AttachmentsMinimized=False
@@ -144,6 +144,9 @@ DlgMoveMinimized=False
 DlgExportGenericMaximized=False
 DlgExportGenericMinimized=False
 DlgExportGeneric=406,-702,599,323
+DlgCOLLADAResourceListMaximized=False
+DlgCOLLADAResourceListMinimized=False
+DlgCOLLADAResourceList=508,-638,300,500
 
 [EditorFrame]
 FrameClassName=WxEditorFrame
@@ -164,7 +167,7 @@ UseScriptDefinedOrder=True
 
 [StartupTipDialog]
 ShowAtStartup=True
-CurrentTip=39
+CurrentTip=40
 
 [UnrealEd.MaterialEditorOptions]
 bShowGrid=True
@@ -239,7 +242,7 @@ Brush=..\..\UDKGame\Content\
 2DS=..\..\UDKGame\Content\
 PSA=C:\UDK\UDK-2011-08\UDKGame\Content\Nomon\Characters
 COLLADAAnim=..\..\UDKGame\Content\
-GenericImport=..\..\UDKGame\Content\
+GenericImport=C:\UDK\UDK-2011-08\UDKGame\Content\Nomon\Assets
 GenericExport=..\..\UDKGame\Content\
 GenericOpen=..\..\UDKGame\Content\
 GenericSave=..\..\UDKGame\Content\
@@ -525,7 +528,7 @@ StartPage_Visible=True
 [UnrealEd]
 RecentAssets="             NomonAvatar.Nomon_Golem_AnimTree NomonAvatar.Nomon_Golem Nomon.Mesh.Nomon_Golem NOM-LevelOne.WhiteMat NOM-LevelTest.Nomon_Golem A_Weapon_RocketLauncher.Cue.A_Weapon_RL_AltFireQueue1_Cue A_Weapon_RocketLauncher.WAV.A_Weapon_RL_Fire03 A_Weapon_RocketLauncher.Cue.A_Weapon_RL_Impact_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_Fire_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_RocketLoaded_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_SeekLost_Cue NomonAvatar.Nomon_Golem_Large NomonAvatar.GolemAnims "
 None=======
-RecentAssets="                              NomonAvatar.Nomon_Golem_AnimTree NomonAssets.Spikes_pCube3 NomonAssets.DarkItem NomonAssets.Enemy NomonAssets.FloorMat NomonAssets.Black NomonAvatar.Nomon_Golem Nomon.Mesh.Nomon_Golem NOM-LevelOne.WhiteMat NOM-LevelTest.Nomon_Golem A_Weapon_RocketLauncher.Cue.A_Weapon_RL_AltFireQueue1_Cue A_Weapon_RocketLauncher.WAV.A_Weapon_RL_Fire03 A_Weapon_RocketLauncher.Cue.A_Weapon_RL_Impact_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_Fire_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_RocketLoaded_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_SeekLost_Cue NomonAvatar.GolemAnims CTF_Flag_IronGuard.Mesh.S_CTF_Flag_IronGuard A_Character_BodyImpacts.BodyImpacts.A_Character_BodyImpact_BodyFall_Cue A_Weapon_BioRifle.Weapon.A_BioRifle_FireImpactFizzle_Cue A_Weapon_BioRifle.Weapon.A_BioRifle_FireImpactExplode02 CTF_Flag_IronGuard.Effects.P_CTF_Flag_IronGuard_Idle_Red CTF_Flag_IronGuard.Effects.P_CTF_Flag_IronGuard_Spawn_Red Pickups.Deployables.Effects.P_Deployables_EMP_Mine_VehicleDisabled Castle_Assets.FX.P_FX_Fire_SubUV_01 Castle_Assets.FX.M_FX_Fire_SubUV_01 NomonAssets.Glowdust NomonAssets.DarkCloud Castle_Assets.FX.T_FX_Fire_SubUV_01 NomonAssets.Dust "
+RecentAssets="                              NomonAssets.Dust Castle_Assets.FX.T_FX_Fire_SubUV_01 NomonAssets.DarkCloud NomonAssets.Glowdust Castle_Assets.FX.M_FX_Fire_SubUV_01 Castle_Assets.FX.P_FX_Fire_SubUV_01 Pickups.Deployables.Effects.P_Deployables_EMP_Mine_VehicleDisabled CTF_Flag_IronGuard.Effects.P_CTF_Flag_IronGuard_Spawn_Red CTF_Flag_IronGuard.Effects.P_CTF_Flag_IronGuard_Idle_Red A_Weapon_BioRifle.Weapon.A_BioRifle_FireImpactExplode02 A_Weapon_BioRifle.Weapon.A_BioRifle_FireImpactFizzle_Cue A_Character_BodyImpacts.BodyImpacts.A_Character_BodyImpact_BodyFall_Cue CTF_Flag_IronGuard.Mesh.S_CTF_Flag_IronGuard NomonAvatar.GolemAnims A_Weapon_RocketLauncher.Cue.A_Weapon_RL_SeekLost_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_RocketLoaded_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_Fire_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_Impact_Cue A_Weapon_RocketLauncher.WAV.A_Weapon_RL_Fire03 A_Weapon_RocketLauncher.Cue.A_Weapon_RL_AltFireQueue1_Cue NOM-LevelTest.Nomon_Golem NOM-LevelOne.WhiteMat Nomon.Mesh.Nomon_Golem NomonAvatar.Nomon_Golem NomonAssets.Black NomonAssets.FloorMat NomonAssets.Enemy NomonAssets.DarkItem NomonAssets.Spikes_pCube3 NomonAvatar.Nomon_Golem_AnimTree "
 
 [ReferencedAssets]
 SplitterPos=200
@@ -680,6 +683,8 @@ Texture2DSplitterPosProportionFavorites=0.289017
 Texture2DSplitterPosProportion=0.500000
 SeqEvent_PlayerSpawnedSplitterPosProportion=0.500000
 SeqEvent_PlayerSpawnedSplitterPosProportionFavorites=0.500000
+ColladaFactorySplitterPosProportionFavorites=0.286533
+ColladaFactorySplitterPosProportion=0.501393
 
 [ContentBrowserUIState]
 FilterPanelHeight=200.000000
@@ -688,7 +693,7 @@ FilterPanelSearchString=
 LeftPanelWidth=266.000000
 IsLeftPanelCollapsed=False
 ExpandedPackages=/Engine;/UDKGame;/UDKGame/Content;/UDKGame/Content/Nomon;/UDKGame/Content/Nomon/Assets;/UDKGame/Content/Nomon/Assets/NomonAssets;/UDKGame/Content/Nomon/Characters;/UDKGame/Content/Nomon/NomonLevels;/UDKGame/Content/Nomon/NomonLevels/NOM-LevelTest;
-LeftSubpanelsState=mSharedCollectionsSizer:False:33.3164009809934|mPrivateCollectionsSizer:True:28.2|mPackagesSizer:False:453.483599019007|
+LeftSubpanelsState=mSharedCollectionsSizer:False:70.9148472291364|mPrivateCollectionsSizer:True:28.2|mPackagesSizer:False:743.885152770864|
 SelectedSharedCollection=UDK Cool Materials
 IsUsingFlatPackageList=False
 AssetViewLayoutAsDouble=3.000000
@@ -769,7 +774,7 @@ SeqEvent_Touch=Object.TouchTypes.ClassProximityTypes Object.SeqEvent_Touch Objec
 SequenceEvent=Object.SequenceEvent Object.SequenceObject
 SequenceOp=Object.SeqAct_AttachToActor Object.SequenceAction.Targets Object.SequenceObject
 SequenceObject=Object.SequenceObject
-Object=Object.AnimNodeBlendList Object.Performance Object.AnimNodeBlendBase Object.Morph
+Object=Object.General Object.SkeletalMesh Object.StaticMesh Object.Materials 
 SeqAct_ModifyHealth=Object.SeqAct_ModifyHealth Object.SequenceAction Object.SequenceObject
 SequenceAction=Object.SeqAct_AttachToActor Object.SequenceAction.Targets Object.SequenceObject
 SeqVar_Player=Object.SeqVar_Player Object.SeqVar_Object Object.SequenceVariable Object.SequenceObject
@@ -836,7 +841,7 @@ SeqAct_ActorFactory=Object.SequenceAction Object.SequenceObject
 WorldInfo=
 ZoneInfo=
 Info=
-FbxImportUI=Object.General Object.SkeletalMesh Object.StaticMesh Object.Materials
+FbxImportUI=Object.General Object.SkeletalMesh Object.StaticMesh Object.Materials 
 StaticMesh=
 StaticMeshActor=Object.StaticMeshActor Object.Movement.Location
 StaticMeshActorBase=Object.StaticMeshActor Object.Movement.Location
@@ -887,6 +892,7 @@ MaterialExpressionParticleSubUV=
 MaterialExpressionMultiply=Object.MaterialExpression
 Texture2D=
 SeqEvent_PlayerSpawned=Object.SequenceEvent Object.SequenceObject
+ColladaFactory=
 
 [AnimSetViewer]
 LightDir=P=-8192 Y=-8192 R=0
