--- a/UDK-2011-08/UDKGame/Config/UDKEditorUserSettings.ini
+++ b/UDK-2011-08/UDKGame/Config/UDKEditorUserSettings.ini
@@ -132,7 +132,7 @@ DlgBrushBuilderMinimized=False
 DlgBrushBuilder=2070,378,356,333
 StaticMeshEditorMaximized=False
 StaticMeshEditorMinimized=False
-StaticMeshEditor=359,76,930,650
+StaticMeshEditor=80,90,930,650
 ASVSocketMgrMaximized=False
 ASVSocketMgrMinimized=False
 ASVSocketMgr=100,100,640,300
@@ -167,7 +167,7 @@ UseScriptDefinedOrder=True
 
 [StartupTipDialog]
 ShowAtStartup=True
-CurrentTip=40
+CurrentTip=42
 
 [UnrealEd.MaterialEditorOptions]
 bShowGrid=True
@@ -528,7 +528,7 @@ StartPage_Visible=True
 [UnrealEd]
 RecentAssets="             NomonAvatar.Nomon_Golem_AnimTree NomonAvatar.Nomon_Golem Nomon.Mesh.Nomon_Golem NOM-LevelOne.WhiteMat NOM-LevelTest.Nomon_Golem A_Weapon_RocketLauncher.Cue.A_Weapon_RL_AltFireQueue1_Cue A_Weapon_RocketLauncher.WAV.A_Weapon_RL_Fire03 A_Weapon_RocketLauncher.Cue.A_Weapon_RL_Impact_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_Fire_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_RocketLoaded_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_SeekLost_Cue NomonAvatar.Nomon_Golem_Large NomonAvatar.GolemAnims "
 None=======
-RecentAssets="                              NomonAssets.Dust Castle_Assets.FX.T_FX_Fire_SubUV_01 NomonAssets.DarkCloud NomonAssets.Glowdust Castle_Assets.FX.M_FX_Fire_SubUV_01 Castle_Assets.FX.P_FX_Fire_SubUV_01 Pickups.Deployables.Effects.P_Deployables_EMP_Mine_VehicleDisabled CTF_Flag_IronGuard.Effects.P_CTF_Flag_IronGuard_Spawn_Red CTF_Flag_IronGuard.Effects.P_CTF_Flag_IronGuard_Idle_Red A_Weapon_BioRifle.Weapon.A_BioRifle_FireImpactExplode02 A_Weapon_BioRifle.Weapon.A_BioRifle_FireImpactFizzle_Cue A_Character_BodyImpacts.BodyImpacts.A_Character_BodyImpact_BodyFall_Cue CTF_Flag_IronGuard.Mesh.S_CTF_Flag_IronGuard NomonAvatar.GolemAnims A_Weapon_RocketLauncher.Cue.A_Weapon_RL_SeekLost_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_RocketLoaded_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_Fire_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_Impact_Cue A_Weapon_RocketLauncher.WAV.A_Weapon_RL_Fire03 A_Weapon_RocketLauncher.Cue.A_Weapon_RL_AltFireQueue1_Cue NOM-LevelTest.Nomon_Golem NOM-LevelOne.WhiteMat Nomon.Mesh.Nomon_Golem NomonAvatar.Nomon_Golem NomonAssets.Black NomonAssets.FloorMat NomonAssets.Enemy NomonAssets.DarkItem NomonAssets.Spikes_pCube3 NomonAvatar.Nomon_Golem_AnimTree "
+RecentAssets="                              NomonAssets.arches_ornate_left NomonAssets.arches_middle NomonAssets.arches_left NomonAssets.enemy2 NomonAssets.gate_wall NomonAssets.pillar_top_left NomonAssets.Wheel NomonAssets.Dust Castle_Assets.FX.T_FX_Fire_SubUV_01 NomonAssets.DarkCloud NomonAssets.Glowdust Castle_Assets.FX.M_FX_Fire_SubUV_01 Castle_Assets.FX.P_FX_Fire_SubUV_01 Pickups.Deployables.Effects.P_Deployables_EMP_Mine_VehicleDisabled CTF_Flag_IronGuard.Effects.P_CTF_Flag_IronGuard_Spawn_Red CTF_Flag_IronGuard.Effects.P_CTF_Flag_IronGuard_Idle_Red A_Weapon_BioRifle.Weapon.A_BioRifle_FireImpactExplode02 A_Weapon_BioRifle.Weapon.A_BioRifle_FireImpactFizzle_Cue A_Character_BodyImpacts.BodyImpacts.A_Character_BodyImpact_BodyFall_Cue CTF_Flag_IronGuard.Mesh.S_CTF_Flag_IronGuard NomonAvatar.GolemAnims A_Weapon_RocketLauncher.Cue.A_Weapon_RL_SeekLost_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_RocketLoaded_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_Fire_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_Impact_Cue A_Weapon_RocketLauncher.WAV.A_Weapon_RL_Fire03 A_Weapon_RocketLauncher.Cue.A_Weapon_RL_AltFireQueue1_Cue NOM-LevelTest.Nomon_Golem NOM-LevelOne.WhiteMat Nomon.Mesh.Nomon_Golem "
 
 [ReferencedAssets]
 SplitterPos=200
@@ -693,7 +693,7 @@ FilterPanelSearchString=
 LeftPanelWidth=266.000000
 IsLeftPanelCollapsed=False
 ExpandedPackages=/Engine;/UDKGame;/UDKGame/Content;/UDKGame/Content/Nomon;/UDKGame/Content/Nomon/Assets;/UDKGame/Content/Nomon/Assets/NomonAssets;/UDKGame/Content/Nomon/Characters;/UDKGame/Content/Nomon/NomonLevels;/UDKGame/Content/Nomon/NomonLevels/NOM-LevelTest;
-LeftSubpanelsState=mSharedCollectionsSizer:False:70.9148472291364|mPrivateCollectionsSizer:True:28.2|mPackagesSizer:False:743.885152770864|
+LeftSubpanelsState=mSharedCollectionsSizer:False:184.756837518187|mPrivateCollectionsSizer:True:28.2|mPackagesSizer:False:630.043162481813|
 SelectedSharedCollection=UDK Cool Materials
 IsUsingFlatPackageList=False
 AssetViewLayoutAsDouble=3.000000
@@ -774,7 +774,7 @@ SeqEvent_Touch=Object.TouchTypes.ClassProximityTypes Object.SeqEvent_Touch Objec
 SequenceEvent=Object.SequenceEvent Object.SequenceObject
 SequenceOp=Object.SeqAct_AttachToActor Object.SequenceAction.Targets Object.SequenceObject
 SequenceObject=Object.SequenceObject
-Object=Object.General Object.SkeletalMesh Object.StaticMesh Object.Materials 
+Object=
 SeqAct_ModifyHealth=Object.SeqAct_ModifyHealth Object.SequenceAction Object.SequenceObject
 SequenceAction=Object.SeqAct_AttachToActor Object.SequenceAction.Targets Object.SequenceObject
 SeqVar_Player=Object.SeqVar_Player Object.SeqVar_Object Object.SequenceVariable Object.SequenceObject
