changed the location of 3D assets

--- a/UDK-2011-08/UDKGame/Config/UDKInput.ini
+++ b/UDK-2011-08/UDKGame/Config/UDKInput.ini
@@ -135,7 +135,7 @@ Bindings=(Name="LeftControl",Command="GBA_Jump")
 Bindings=(Name="Enter",Command="GBA_Use")
 Bindings=(Name="F10",Command="ToggleInventory")
 Bindings=(Name="SpaceBar",Command="GBA_Jump")
-Bindings=(Name="W",Command="GBA_Jump")
+Bindings=(Name="W",Command="GBA_MoveForward")
 Bindings=(Name="S",Command="GBA_Backward")
 Bindings=(Name="A",Command="GBA_StrafeLeft")
 Bindings=(Name="D",Command="GBA_StrafeRight")
@@ -490,5 +490,5 @@ HoverBoardPitchMultiplier=0.5f
 
 [IniVersion]
 0=1312493182.000000
-1=1321398508.000000
+1=1322057878.000000
 
