--- a/UDK-2011-08/UDKGame/Config/UDKEditorUserSettings.ini
+++ b/UDK-2011-08/UDKGame/Config/UDKEditorUserSettings.ini
@@ -167,7 +167,7 @@ UseScriptDefinedOrder=True
 
 [StartupTipDialog]
 ShowAtStartup=True
-CurrentTip=43
+CurrentTip=44
 
 [UnrealEd.MaterialEditorOptions]
 bShowGrid=True
@@ -528,7 +528,7 @@ StartPage_Visible=True
 [UnrealEd]
 RecentAssets="             NomonAvatar.Nomon_Golem_AnimTree NomonAvatar.Nomon_Golem Nomon.Mesh.Nomon_Golem NOM-LevelOne.WhiteMat NOM-LevelTest.Nomon_Golem A_Weapon_RocketLauncher.Cue.A_Weapon_RL_AltFireQueue1_Cue A_Weapon_RocketLauncher.WAV.A_Weapon_RL_Fire03 A_Weapon_RocketLauncher.Cue.A_Weapon_RL_Impact_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_Fire_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_RocketLoaded_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_SeekLost_Cue NomonAvatar.Nomon_Golem_Large NomonAvatar.GolemAnims "
 None=======
-RecentAssets="                              NomonAssets.arches_right NomonAssets.arches_ornate_right NomonAssets.arches_ornate_middle NomonAssets.bridge NomonAssets.gate NomonAssets.pillar_top_left NomonAssets.pillar_top_middle NomonAssets.pillar_top_right NomonAssets.railing NomonAssets.torch_wall Nomon.Mesh.Nomon_Golem NOM-LevelOne.WhiteMat NOM-LevelTest.Nomon_Golem A_Weapon_RocketLauncher.Cue.A_Weapon_RL_AltFireQueue1_Cue A_Weapon_RocketLauncher.WAV.A_Weapon_RL_Fire03 A_Weapon_RocketLauncher.Cue.A_Weapon_RL_Impact_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_Fire_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_RocketLoaded_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_SeekLost_Cue NomonAvatar.GolemAnims CTF_Flag_IronGuard.Mesh.S_CTF_Flag_IronGuard A_Character_BodyImpacts.BodyImpacts.A_Character_BodyImpact_BodyFall_Cue A_Weapon_BioRifle.Weapon.A_BioRifle_FireImpactFizzle_Cue A_Weapon_BioRifle.Weapon.A_BioRifle_FireImpactExplode02 CTF_Flag_IronGuard.Effects.P_CTF_Flag_IronGuard_Idle_Red CTF_Flag_IronGuard.Effects.P_CTF_Flag_IronGuard_Spawn_Red Pickups.Deployables.Effects.P_Deployables_EMP_Mine_VehicleDisabled Castle_Assets.FX.P_FX_Fire_SubUV_01 Castle_Assets.FX.M_FX_Fire_SubUV_01 NomonAssets.Glowdust "
+RecentAssets="                              NomonAssets.Glowdust Castle_Assets.FX.M_FX_Fire_SubUV_01 Castle_Assets.FX.P_FX_Fire_SubUV_01 Pickups.Deployables.Effects.P_Deployables_EMP_Mine_VehicleDisabled CTF_Flag_IronGuard.Effects.P_CTF_Flag_IronGuard_Spawn_Red CTF_Flag_IronGuard.Effects.P_CTF_Flag_IronGuard_Idle_Red A_Weapon_BioRifle.Weapon.A_BioRifle_FireImpactExplode02 A_Weapon_BioRifle.Weapon.A_BioRifle_FireImpactFizzle_Cue A_Character_BodyImpacts.BodyImpacts.A_Character_BodyImpact_BodyFall_Cue CTF_Flag_IronGuard.Mesh.S_CTF_Flag_IronGuard NomonAvatar.GolemAnims A_Weapon_RocketLauncher.Cue.A_Weapon_RL_SeekLost_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_RocketLoaded_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_Fire_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_Impact_Cue A_Weapon_RocketLauncher.WAV.A_Weapon_RL_Fire03 A_Weapon_RocketLauncher.Cue.A_Weapon_RL_AltFireQueue1_Cue NOM-LevelTest.Nomon_Golem NOM-LevelOne.WhiteMat Nomon.Mesh.Nomon_Golem NomonAssets.torch_wall NomonAssets.railing NomonAssets.pillar_top_right NomonAssets.pillar_top_middle NomonAssets.pillar_top_left NomonAssets.gate NomonAssets.bridge NomonAssets.arches_ornate_middle NomonAssets.arches_ornate_right NomonAssets.arches_right "
 
 [ReferencedAssets]
 SplitterPos=200
@@ -693,7 +693,7 @@ FilterPanelSearchString=
 LeftPanelWidth=266.000000
 IsLeftPanelCollapsed=False
 ExpandedPackages=/Engine;/UDKGame;/UDKGame/Content;/UDKGame/Content/Nomon;/UDKGame/Content/Nomon/Assets;/UDKGame/Content/Nomon/Assets/NomonAssets;/UDKGame/Content/Nomon/Characters;/UDKGame/Content/Nomon/NomonLevels;/UDKGame/Content/Nomon/NomonLevels/NOM-LevelTest;
-LeftSubpanelsState=mSharedCollectionsSizer:False:184.024837369541|mPrivateCollectionsSizer:True:28.2|mPackagesSizer:False:318.775162630459|
+LeftSubpanelsState=mSharedCollectionsSizer:False:297.035335754164|mPrivateCollectionsSizer:True:28.2|mPackagesSizer:False:517.764664245836|
 SelectedSharedCollection=UDK Cool Materials
 IsUsingFlatPackageList=False
 AssetViewLayoutAsDouble=3.000000
